Created the Create Shopping List Activity. Still needs the Java and SQL code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Shopping List</string>
     <string name="action_settings">Settings</string>
+    <string name="titleCreateList">Create a Shopping List</string>
+    <string name="storeName">Store Name</string>
+    <string name="listName">List Name</string>
+    <string name="dateGoing">Date of Trip</string>
 </resources>
