added viewList activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="storeName">Store Name</string>
     <string name="listName">List Name</string>
     <string name="dateGoing">Date of Trip</string>
+    <string name="title_activity_view_list">ViewListActivity</string>
 </resources>
