--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="listName">List Name</string>
     <string name="dateGoing">Date of Trip</string>
     <string name="title_activity_view_list">ViewListActivity</string>
+    <string name="open">Open</string>
+    <string name="delete">Delete</string>
 </resources>
