--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_view_list">ViewListActivity</string>
     <string name="open">Open</string>
     <string name="delete">Delete</string>
+    <string name="title_activity_open_list">openListActivity</string>
 </resources>
