added button and list to openListActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="open">Open</string>
     <string name="delete">Delete</string>
     <string name="title_activity_open_list">openListActivity</string>
+    <string name="addItem">Add Item</string>
 </resources>
