Made the item rows layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_add_item">AddItemActivity</string>
     <string name="addItemTo">Add an Item</string>
     <string name="quantity">Quantity</string>
+    <string name="title_activity_item_rows">ItemRows</string>
 </resources>
