--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="addItemTo">Add an Item</string>
     <string name="quantity">Quantity</string>
     <string name="title_activity_item_rows">ItemRows</string>
+    <string name="title_activity_item_select">ItemSelect</string>
+    <string name="title_activity_list_select">ListSelect</string>
 </resources>
