--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="title_activity_item_rows">ItemRows</string>
     <string name="title_activity_item_select">ItemSelect</string>
     <string name="title_activity_list_select">ListSelect</string>
+    <color name="background">#2E2E30</color>
+    <color name="white">#FFFFFF</color>
 </resources>
